# agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/paper_secretary/: __init__.py  agent.py  cli.py  config.py  index.py
src/slack_agent/: __init__.py  agent.py  cli.py  config.py  mcp_client.py
tests/: test_agent.py  test_index.py  test_mcp_client.py
