[project]
name = "paper-secretary"
version = "0.1.0"
description = "A LangGraph secretary agent that searches a local paper library using a remote Ollama server."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<2",
    "langchain-ollama>=1.0,<2",
    "pypdf>=5,<7",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
paper-secretary = "paper_secretary.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_secretary"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
