[project]
name = "slack-mcp-agent"
version = "0.1.0"
description = "A LangGraph agent that understands instructions and executes Slack MCP tools using Ollama."
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0,<2",
    "langchain-ollama>=1.0,<2",
    "mcp>=1.0,<2",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10"]

[project.scripts]
slack-agent = "slack_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
